icons, some styling, windows, selectable tools

--- a/bin/app.html
+++ b/bin/app.html
@@ -15,18 +15,25 @@
 				<div class='left_column'>
 					<div class='panel flex1 h320' id='layers'>
 						<h1>layers</h1>
+						<img src='icons/icon_add.svg' id='add_layer' class='add_btn'></img>
 						<div class='separator'></div>
-						<div class='window h224'></div>
+						<div class='window h_m80'></div>
 					</div>
 					<div class='panel flex1' id='levels'>
 						<h1>levels</h1>
+						<img src='icons/icon_add.svg' id='add_level' class='add_btn'></img>
 						<div class='separator'></div>
-						<div class='window'></div>
+						<div class='window h_m80'></div>
 					</div>
 				</div>
 				<div class='workspace'></div>
 				<div class='right_column'>
-					<div class='panel' id='tools'></div>
+					<div class='panel' id='tools'>
+						<img src='icons/icon_cursor.svg' id='icon_cursor' class='tool'></img>
+						<img src='icons/icon_pencil.svg' id='icon_pencil' class='tool'></img>
+						<img src='icons/icon_eraser.svg' id='icon_eraser' class='tool'></img>
+						<img src='icons/icon_bucket.svg' id='icon_bucket' class='tool'></img>
+					</div>
 					<div class='panel flex1' id='tiles'>
 						<h1>tiles</h1>
 						<div class='separator'></div>
