Level window things

--- a/bin/app.html
+++ b/bin/app.html
@@ -18,12 +18,14 @@
 						<img src='icons/icon_add.svg' id='add_layer' class='add_btn'></img>
 						<div class='separator'></div>
 						<div class='window h_m80'></div>
+						<img src='icons/icon_delete.svg' id='delete_layer' class='delete_btn'></img>
 					</div>
-					<div class='panel flex1' id='levels'>
+					<div class='panel flex1 levels' id='levels'>
 						<h1>levels</h1>
 						<img src='icons/icon_add.svg' id='add_level' class='add_btn'></img>
 						<div class='separator'></div>
 						<div class='window h_m80'></div>
+						<img src='icons/icon_delete.svg' id='delete_level' class='delete_btn'></img>
 					</div>
 				</div>
 				<div class='workspace'></div>
