initial heaps support

--- a/bin/app.html
+++ b/bin/app.html
@@ -28,9 +28,7 @@
 						<img src='icons/icon_delete.svg' id='delete_level_btn' class='btn btn_bl'></img>
 					</div>
 				</div>
-				<div class='workspace' id='workspace'>
-					<div class='workspace_tile_container' id='tile_container'></div>
-				</div>
+				<div class='workspace' id='workspace'></div>
 				<div class='right_column'>
 					<div class='panel' id='tools'>
 						<img src='icons/icon_cursor.svg' id='icon_cursor' class='tool'></img>
